--- a/ammn-frontend/src/app/globals.css
+++ b/ammn-frontend/src/app/globals.css
@@ -106,11 +106,11 @@ body {
     position: relative;
 }
 .banner .slider{
-    position: absolute;
-    width: 200px;
-    height: 250px;
+    position: relative;
+    width: 280px;
+    height: 200px;
     top: 10%;
-    left: calc(50% - 100px);
+    left: calc(50% - 150px);
     transform-style: preserve-3d;
     transform: perspective(1000px);
     animation: autoRun 20s linear infinite;
@@ -129,7 +129,7 @@ body {
     inset: 0 0 0 0;
     transform: 
         rotateY(calc( (var(--position) - 1) * (360 / var(--quantity)) * 1deg))
-        translateZ(550px);
+        translateZ(500px);
 }
 .banner .slider .item img{
     width: 100%;
@@ -174,13 +174,13 @@ body {
     font-size: 3em;
 }
 .banner .content .model{
-    background-image: url(/gradient.png);
+    background-image: url('/gradient.png');
     width: 100%;
-    height: 75vh;
+    height: 85vh;
     position: absolute;
     bottom: 0;
     left: 0;
-    background-size: auto 130%;
+    background-size: auto 90%;
     background-repeat: no-repeat;
     background-position: top center;
     z-index: 1;
@@ -188,7 +188,7 @@ body {
 @media screen and (max-width: 1023px) {
     .banner .slider{
         width: 160px;
-        height: 200px;
+        height: 110px;
         left: calc(50% - 80px);
     }
     .banner .slider .item{
