--- a/ammn-frontend/src/app/globals.css
+++ b/ammn-frontend/src/app/globals.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Kufi+Arabic:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -386,3 +387,8 @@ body {
   animation: gradient-bg 15s ease infinite;
 }
 
+
+.welcome-back {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+}
