--- a/ammn-frontend/src/app/globals.css
+++ b/ammn-frontend/src/app/globals.css
@@ -392,3 +392,7 @@ body {
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
 }
+
+.slides {
+  font-family: Noto Kufi Arabic, sans-serif;
+}
